--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "jestSetup.js"
   ],
   "dependencies": {
-    "recyclerlistview": "4.2.1",
+    "recyclerlistview": "npm:@hello-aurora/recyclerlistview@4.2.2",
     "tslib": "2.6.3"
   },
   "codegenConfig": {
